@@ -28,6 +28,7 @@ Version 1.3.rc1 (2011-??-??)
 - Fixed invisible subgroups when no product in parent group (#2121)
 - Fixed potential issue in email addresses (#2041)
 - Fixed invalid markup in several templates (#2081)
+- Fixed related products loaded from product cache (#2236)
 - Dropped unimplemented enableGoogleAnalytics checkbox in store config (#2102)
 
 Version 1.3.beta2 (2011-08-28)
